# unfun-planner

./: .gitignore
.github/workflows/: build.yml
data/: fnv_vanilla_data.json
examples/: example_build.toml
extractor/: CMakeLists.txt  SETUP.md  exports.def  extract.cpp  extract.h  json_writer.cpp  json_writer.h  main.cpp  prefix.h  stubs.cpp
openspec/changes/archive/2026-03-08-fnv-build-planner/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-08-fnv-build-planner/specs/build-data-model/: spec.md
openspec/changes/archive/2026-03-08-fnv-build-planner/specs/build-planner-cli/: spec.md
openspec/changes/archive/2026-03-08-fnv-build-planner/specs/build-simulator/: spec.md
openspec/specs/nvse-extractor/: spec.md
planner/: Cargo.toml
planner/src/: main.rs
planner/src/cli/: commands.rs  formatter.rs  mod.rs
planner/src/model/: build_plan.rs  character.rs  game_data.rs  mod.rs
planner/src/simulator/: engine.rs  mod.rs  plan_input.rs
planner/tests/: integration.rs
schema/: build_data.schema.json
